--- a/UGBDElasticService/package.json
+++ b/UGBDElasticService/package.json
@@ -11,7 +11,7 @@
   "author": "Luca Frigerio",
   "license": "ISC",
   "dependencies": {
-    "@angular/cli": "^6.1.4",
+    "@angular/cli": "^9.1.6",
     "@elastic/elasticsearch": "^6.8.0",
     "@types/bluebird": "^3.5.23",
     "@types/express": "^4.16.0",
@@ -30,7 +30,8 @@
     "mongoose": "^5.2.8",
     "mongoose-auto-increment": "^5.0.1",
     "mongoose-sequence": "^4.0.1",
-    "nodemon": "^1.18.3",
+    "mqtt": "^4.0.1",
+    "nodemon": "^2.0.4",
     "object-hash": "^1.3.0",
     "remove": "^0.1.5",
     "rxjs": "^6.2.2",
