--- a/UGBDElasticService/tsconfig.json
+++ b/UGBDElasticService/tsconfig.json
@@ -6,7 +6,9 @@
         "sourceMap": true,
         "target": "es6",
         "outDir": "./dist",
-        "baseUrl": "./lib"
+        "baseUrl": "./lib",
+        "resolveJsonModule": true,
+        "esModuleInterop": true
     },
     "include": [
         "lib/**/*.ts"
