--- a/UGBDParserService/package.json
+++ b/UGBDParserService/package.json
@@ -11,13 +11,14 @@
   "author": "Luca Frigerio",
   "license": "ISC",
   "dependencies": {
-    "@angular/cli": "^6.1.4",
+    "@angular/cli": "^9.1.6",
     "@elastic/elasticsearch": "^6.8.0",
     "@types/bluebird": "^3.5.23",
     "@types/express": "^4.16.0",
     "@types/mongoose-auto-increment": "^5.0.30",
     "@types/mongoose-sequence": "^3.0.3",
     "@types/object-hash": "^1.2.0",
+    "@types/tmp": "^0.2.0",
     "angular2-uuid": "^1.1.1",
     "axios": "^0.18.0",
     "basic-auth": "^2.0.0",
@@ -31,12 +32,14 @@
     "mongoose": "^5.6.10",
     "mongoose-auto-increment": "^5.0.1",
     "mongoose-sequence": "^4.0.1",
+    "mqtt": "^4.0.1",
     "nodejs-base64": "^1.0.3",
-    "nodemon": "^1.18.3",
+    "nodemon": "^2.0.4",
     "object-hash": "^1.3.0",
     "remove": "^0.1.5",
     "rxjs": "^6.2.2",
     "string-to-stream": "^3.0.0",
+    "tmp": "^0.2.1",
     "ts-md5": "^1.2.4",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
